feat: update Telco Churn Analysis notebook with detailed objectives and data loading section

--- a/notebooks/telco_analysis.ipynb
+++ b/notebooks/telco_analysis.ipynb
@@ -5,23 +5,16 @@
    "id": "041ccb70",
    "metadata": {},
    "source": [
-    "# Telco Churn Data Analysis Report"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ef38861c",
-   "metadata": {},
-   "source": [
+    "# Telco Churn Data Analysis Report\n",
     "## Table of Contents\n",
     "1. [Objective](#objective)\n",
-    "2. Data Loading (SQL)\n",
-    "3. Data Quality Checks\n",
-    "4. Exploratory Data Analysis\n",
-    "5. Feature Engineering\n",
-    "6. Modelling\n",
-    "7. Evaluation\n",
-    "8. Conclusion / Next Steps\n"
+    "2. [Data Loading (SQL)](#data-loading)\n",
+    "3. [Data Quality Checks](#data-quality-checks)\n",
+    "4. [Exploratory Data Analysis](#exploratory-data-analysis)\n",
+    "5. [Feature Engineering](#feature-engineering)\n",
+    "6. [Modelling](#modelling)\n",
+    "7. [Evaluation](#evaluation)\n",
+    "8. [Conclusion / Next Steps](#conclusion)"
    ]
   },
   {
@@ -29,7 +22,363 @@
    "id": "ebd161ea",
    "metadata": {},
    "source": [
-    "## Objective\n"
+    "## Objective\n",
+    "- Perform initial data loading onto postgresql server \n",
+    "- Conduct Exploratory Data analysis to clean churn data and find trends\n",
+    "- Prepare the dataset for ML through cleaning and feature engineering\n",
+    "- Train and evaluate the classification model to predict customer churn"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b7ee7699",
+   "metadata": {},
+   "source": [
+    "## Data Loading\n",
+    "This section is to detail how the data is loaded from csv file using pandas, then uploaded as onto postgresql using sqlalchemy. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d3d7ee71",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>customerID</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>SeniorCitizen</th>\n",
+       "      <th>Partner</th>\n",
+       "      <th>Dependents</th>\n",
+       "      <th>tenure</th>\n",
+       "      <th>PhoneService</th>\n",
+       "      <th>MultipleLines</th>\n",
+       "      <th>InternetService</th>\n",
+       "      <th>OnlineSecurity</th>\n",
+       "      <th>...</th>\n",
+       "      <th>DeviceProtection</th>\n",
+       "      <th>TechSupport</th>\n",
+       "      <th>StreamingTV</th>\n",
+       "      <th>StreamingMovies</th>\n",
+       "      <th>Contract</th>\n",
+       "      <th>PaperlessBilling</th>\n",
+       "      <th>PaymentMethod</th>\n",
+       "      <th>MonthlyCharges</th>\n",
+       "      <th>TotalCharges</th>\n",
+       "      <th>Churn</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>7590-VHVEG</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
+       "      <td>1</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No phone service</td>\n",
+       "      <td>DSL</td>\n",
+       "      <td>No</td>\n",
+       "      <td>...</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Month-to-month</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Electronic check</td>\n",
+       "      <td>29.85</td>\n",
+       "      <td>29.85</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>5575-GNVDE</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>34</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
+       "      <td>DSL</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>One year</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Mailed check</td>\n",
+       "      <td>56.95</td>\n",
+       "      <td>1889.5</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3668-QPYBK</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
+       "      <td>DSL</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>...</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Month-to-month</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Mailed check</td>\n",
+       "      <td>53.85</td>\n",
+       "      <td>108.15</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>7795-CFOCW</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>45</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No phone service</td>\n",
+       "      <td>DSL</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>One year</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Bank transfer (automatic)</td>\n",
+       "      <td>42.30</td>\n",
+       "      <td>1840.75</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>9237-HQITU</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Fiber optic</td>\n",
+       "      <td>No</td>\n",
+       "      <td>...</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Month-to-month</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Electronic check</td>\n",
+       "      <td>70.70</td>\n",
+       "      <td>151.65</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 21 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   customerID  gender  SeniorCitizen Partner Dependents  tenure PhoneService  \\\n",
+       "0  7590-VHVEG  Female              0     Yes         No       1           No   \n",
+       "1  5575-GNVDE    Male              0      No         No      34          Yes   \n",
+       "2  3668-QPYBK    Male              0      No         No       2          Yes   \n",
+       "3  7795-CFOCW    Male              0      No         No      45           No   \n",
+       "4  9237-HQITU  Female              0      No         No       2          Yes   \n",
+       "\n",
+       "      MultipleLines InternetService OnlineSecurity  ... DeviceProtection  \\\n",
+       "0  No phone service             DSL             No  ...               No   \n",
+       "1                No             DSL            Yes  ...              Yes   \n",
+       "2                No             DSL            Yes  ...               No   \n",
+       "3  No phone service             DSL            Yes  ...              Yes   \n",
+       "4                No     Fiber optic             No  ...               No   \n",
+       "\n",
+       "  TechSupport StreamingTV StreamingMovies        Contract PaperlessBilling  \\\n",
+       "0          No          No              No  Month-to-month              Yes   \n",
+       "1          No          No              No        One year               No   \n",
+       "2          No          No              No  Month-to-month              Yes   \n",
+       "3         Yes          No              No        One year               No   \n",
+       "4          No          No              No  Month-to-month              Yes   \n",
+       "\n",
+       "               PaymentMethod MonthlyCharges  TotalCharges Churn  \n",
+       "0           Electronic check          29.85         29.85    No  \n",
+       "1               Mailed check          56.95        1889.5    No  \n",
+       "2               Mailed check          53.85        108.15   Yes  \n",
+       "3  Bank transfer (automatic)          42.30       1840.75    No  \n",
+       "4           Electronic check          70.70        151.65   Yes  \n",
+       "\n",
+       "[5 rows x 21 columns]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# imports and loading data from csv file\n",
+    "import pandas as pd\n",
+    "from sqlalchemy import create_engine\n",
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "# force update of environment variables\n",
+    "load_dotenv(override=True)\n",
+    "\n",
+    "# load data from csv\n",
+    "df = pd.read_csv(\"../data/raw/telco_customer.csv\")\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e9d98961",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "postgresql+psycopg2://postgres:Superduper101*@localhost:5432/telco_churn\n",
+      "   customerID  gender  SeniorCitizen Partner Dependents  tenure PhoneService  \\\n",
+      "0  7590-VHVEG  Female              0     Yes         No       1           No   \n",
+      "1  5575-GNVDE    Male              0      No         No      34          Yes   \n",
+      "2  3668-QPYBK    Male              0      No         No       2          Yes   \n",
+      "3  7795-CFOCW    Male              0      No         No      45           No   \n",
+      "4  9237-HQITU  Female              0      No         No       2          Yes   \n",
+      "\n",
+      "      MultipleLines InternetService OnlineSecurity  ... DeviceProtection  \\\n",
+      "0  No phone service             DSL             No  ...               No   \n",
+      "1                No             DSL            Yes  ...              Yes   \n",
+      "2                No             DSL            Yes  ...               No   \n",
+      "3  No phone service             DSL            Yes  ...              Yes   \n",
+      "4                No     Fiber optic             No  ...               No   \n",
+      "\n",
+      "  TechSupport StreamingTV StreamingMovies        Contract PaperlessBilling  \\\n",
+      "0          No          No              No  Month-to-month              Yes   \n",
+      "1          No          No              No        One year               No   \n",
+      "2          No          No              No  Month-to-month              Yes   \n",
+      "3         Yes          No              No        One year               No   \n",
+      "4          No          No              No  Month-to-month              Yes   \n",
+      "\n",
+      "               PaymentMethod MonthlyCharges  TotalCharges Churn  \n",
+      "0           Electronic check          29.85         29.85    No  \n",
+      "1               Mailed check          56.95        1889.5    No  \n",
+      "2               Mailed check          53.85        108.15   Yes  \n",
+      "3  Bank transfer (automatic)          42.30       1840.75    No  \n",
+      "4           Electronic check          70.70        151.65   Yes  \n",
+      "\n",
+      "[5 rows x 21 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# connect to database and create table from dataframe\n",
+    "url = os.getenv(\"DATABASE_URL\")\n",
+    "engine = create_engine(url)\n",
+    "df.to_sql('telco_customer', con=engine, if_exists='replace', index=False)\n",
+    "\n",
+    "query = \"SELECT * FROM telco_customer LIMIT 5;\"\n",
+    "result = pd.read_sql(query, con=engine)\n",
+    "# verify data was inserted correctly\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c5a7f81",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "55cdc01e",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "556e1865",
+   "metadata": {},
+   "source": [
+    "## Data Quality Checks\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "32e123a7",
+   "metadata": {},
+   "source": [
+    "## Exploratory Data Analysis\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b44f896e",
+   "metadata": {},
+   "source": [
+    "## Feature Engineering"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c5925234",
+   "metadata": {},
+   "source": [
+    "## Modelling"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "23f050a4",
+   "metadata": {},
+   "source": [
+    "## Evaluation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "823681b9",
+   "metadata": {},
+   "source": [
+    "## Conclusion\n"
    ]
   }
  ],
@@ -49,7 +398,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.14.2"
   }
  },
  "nbformat": 4,
